--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build docker image
         run: docker build -t younesseelyoussoufi/todoapp .
       - name : add tag 
-        run :  docker tag younesseelyoussoufi/todoapp:v1.0  younesseelyoussoufi/todoapp:v1.0
+        run :  docker tag todo-node younesseelyoussoufi/todoapp:v1.
       - name: Publish image to docker hub
         run: docker push   younesseelyoussoufi/todoapp:v1.0
       
